--- a/index.html
+++ b/index.html
@@ -5,5 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
   </head>
-  <body></body>
+  <body>
+    <!-- MAIN DIV -->
+    <main>
+      <!-- MENU SECTION -->
+      <div class="side-bar">
+        <!-- LOGO -->
+        <div></div>
+        <!-- HOME SECTION -->
+        <div></div>
+        <!-- PLAYLIST -->
+        <div></div>
+        <!-- USER -->
+        <div></div>
+      </div>
+      <div class="music">
+        <!-- HEADER SECTION -->
+        <header></header>
+        <!-- TOP BAR -->
+        <div></div>
+        <!-- RECENTLY PLAYED -->
+        <div></div>
+        <!-- CREATA PER JOHN DOE -->
+        <div></div>
+        <!-- ARTISTI PIU' POPOLARI -->
+        <div></div>
+      </div>
+    </main>
+    <footer>
+      <!-- title song -->
+      <div></div>
+      <!-- song bar -->
+      <div></div>
+      <!-- volume -->
+      <div></div>
+    </footer>
+  </body>
 </html>
