add: structure and footer div

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Spotify</title>
   </head>
   <body>
@@ -21,24 +22,29 @@
       </div>
       <div class="music">
         <!-- HEADER SECTION -->
-        <header></header>
-        <!-- TOP BAR -->
-        <div></div>
-        <!-- RECENTLY PLAYED -->
-        <div></div>
-        <!-- CREATA PER JOHN DOE -->
-        <div></div>
-        <!-- ARTISTI PIU' POPOLARI -->
-        <div></div>
+        <header>
+          <!-- upgrade -->
+          <div></div>
+        </header>
+        <div class="song">
+          <!-- TOP BAR -->
+          <div></div>
+          <!-- RECENTLY PLAYED -->
+          <div></div>
+          <!-- CREATA PER JOHN DOE -->
+          <div></div>
+          <!-- ARTISTI PIU' POPOLARI -->
+          <div></div>
+        </div>
       </div>
     </main>
     <footer>
       <!-- title song -->
-      <div></div>
+      <div>TITOLO CANZONE</div>
       <!-- song bar -->
-      <div></div>
+      <div>DURATA CANZONE</div>
       <!-- volume -->
-      <div></div>
+      <div>VOLUME</div>
     </footer>
   </body>
 </html>
