--- a/index.html
+++ b/index.html
@@ -19,13 +19,56 @@
       <!-- MENU SECTION -->
       <div class="side-bar">
         <!-- LOGO -->
-        <div></div>
+        <div class="logo">
+          <img src="./img/logo.svg" alt="" />
+        </div>
         <!-- HOME SECTION -->
-        <div></div>
+        <div class="home">
+          <div class="flex home-flex">
+            <div class="icon-menu"><i class="fa-solid fa-house"></i></div>
+            <div>Home</div>
+          </div>
+          <div class="flex home-flex">
+            <div class="icon-menu">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div>Cerca</div>
+          </div>
+          <div class="flex home-flex">
+            <div class="icon-menu">||\</div>
+            <div>La tua libreria</div>
+          </div>
+        </div>
         <!-- PLAYLIST -->
-        <div></div>
+        <div class="playlist">
+          <h3>PLAYLIST</h3>
+          <div class="flex add-playlist">
+            <div class="gray-square">+</div>
+            <div><p>Crea Playlist</p></div>
+          </div>
+          <ul>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+          </ul>
+        </div>
         <!-- USER -->
-        <div></div>
+        <div class="user-install">
+          <div class="install flex">
+            <div><i class="fa-regular fa-circle-down"></i></div>
+            <div><a href="#">Installa app</a></div>
+          </div>
+          <div class="user flex">
+            <div class="user-img">
+              <img src="./img/profile.svg" alt="John Doe" />
+            </div>
+            <div class="username">John Doe</div>
+          </div>
+        </div>
       </div>
       <div class="music">
         <!-- HEADER SECTION -->
