--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="gray-square">+</div>
             <div><p>Crea Playlist</p></div>
           </div>
-          <ul>
+          <ul class="playlist-name">
             <li><a href="#">Nome Playlist</a></li>
             <li><a href="#">Nome Playlist</a></li>
             <li><a href="#">Nome Playlist</a></li>
@@ -59,7 +59,9 @@
         <!-- USER -->
         <div class="user-install">
           <div class="install flex">
-            <div><i class="fa-regular fa-circle-down"></i></div>
+            <div>
+              <a href="#"><i class="fa-regular fa-circle-down"></i></a>
+            </div>
             <div><a href="#">Installa app</a></div>
           </div>
           <div class="user flex">
@@ -74,7 +76,9 @@
         <!-- HEADER SECTION -->
         <header>
           <!-- upgrade -->
-          <div></div>
+          <div>
+            <button class="upgrade">EFFETTUA L'UPGRADE</button>
+          </div>
         </header>
         <div class="song">
           <!-- TOP BAR -->
