--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
       <div class="side-bar">
         <!-- LOGO -->
         <div class="logo">
-          <img src="./img/logo.svg" alt="" />
+          <img src="./img/logo.svg" alt="logo" />
+        </div>
+        <div class="logo-small">
+          <img src="./img/logo-small.svg" alt="logo-small" />
         </div>
         <!-- HOME SECTION -->
         <div class="home">
           <div class="flex home-flex">
             <div class="icon-menu"><i class="fa-solid fa-house"></i></div>
-            <div>Home</div>
+            <div class="home-item">Home</div>
           </div>
           <div class="flex home-flex">
             <div class="icon-menu">
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <div>Cerca</div>
+            <div class="home-item">Cerca</div>
           </div>
           <div class="flex home-flex">
             <div class="icon-menu">||\</div>
-            <div>La tua libreria</div>
+            <div class="home-item">La tua libreria</div>
           </div>
         </div>
         <!-- PLAYLIST -->
@@ -62,13 +65,13 @@
             <div>
               <a href="#"><i class="fa-regular fa-circle-down"></i></a>
             </div>
-            <div><a href="#">Installa app</a></div>
+            <div class="user-text"><a href="#">Installa app</a></div>
           </div>
           <div class="user flex">
             <div class="user-img">
               <img src="./img/profile.svg" alt="John Doe" />
             </div>
-            <div class="username">John Doe</div>
+            <div class="username user-text">John Doe</div>
           </div>
         </div>
       </div>
@@ -82,13 +85,132 @@
         </header>
         <div class="song">
           <!-- TOP BAR -->
-          <div></div>
+          <div>
+            <ul class="flex list">
+              <li><a href="#">IN EVIDENZA</a></li>
+              <li><a href="#">PODCAST</a></li>
+              <li><a href="#">CLASSIFICHE</a></li>
+              <li><a href="#">GENERI E MOOD</a></li>
+              <li><a href="#">NUOVE USCITE</a></li>
+              <li><a href="#">SCOPRI</a></li>
+            </ul>
+          </div>
           <!-- RECENTLY PLAYED -->
-          <div></div>
+          <div class="played">
+            <h1>Recently Played</h1>
+            <div class="mazzo flex">
+              <!-- heavy metal -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/metal_lifting.jpg" alt="metal playlist" />
+                </div>
+                <h3>Heavy Metal</h3>
+                <p>Subtitle</p>
+              </div>
+              <!-- stranger things -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/stranger.jpeg" alt="stranger playlist" />
+                </div>
+                <h3>
+                  Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                </h3>
+                <p>Kyle Dixon & Michael Stein</p>
+              </div>
+              <!-- quiet place -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/aquietplace.jpeg" alt="quiet playlist" />
+                </div>
+                <h3>A quiet place</h3>
+                <p>Subtitle</p>
+              </div>
+              <!-- split -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/split.jpeg" alt="split playlist" />
+                </div>
+                <h3>Split</h3>
+                <p>Subtitle</p>
+              </div>
+              <!-- cure for wellness -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/cure.jpeg" alt="cure playlist" />
+                </div>
+                <h3>A cure for wellness</h3>
+                <p>Subtitle</p>
+              </div>
+              <!-- sinister -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/sinister.jpeg" alt="sinister playlist" />
+                </div>
+                <h3>Sinister</h3>
+                <p>Subtitle</p>
+              </div>
+            </div>
+          </div>
           <!-- CREATA PER JOHN DOE -->
-          <div></div>
+          <div class="played">
+            <h1>Creato per John Doe</h1>
+            <p>Più ascolti, più accurati saranno i suggerimenti</p>
+            <div class="mazzo flex">
+              <!-- heavy metal -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/radar.jpeg" alt="release radar playlist" />
+                </div>
+                <h3>Release Radar</h3>
+              </div>
+              <!-- stranger things -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img src="./img/mixdaily.jpeg" alt="dayli playlist" />
+                </div>
+                <h3>Daily Mix 1</h3>
+              </div>
+            </div>
+          </div>
           <!-- ARTISTI PIU' POPOLARI -->
-          <div></div>
+          <div class="played">
+            <h1>Artisti più popolari</h1>
+            <p>Più ascolti, più accurati saranno i suggerimenti</p>
+            <div class="mazzo flex">
+              <!-- heavy metal -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img
+                    class="autore"
+                    src="./img/youg.jpeg"
+                    alt="Lana del Rey"
+                  />
+                </div>
+                <h3>Lana Del Rey</h3>
+              </div>
+              <!-- stranger things -->
+              <div class="card">
+                <!-- playlist image -->
+                <div>
+                  <img
+                    class="autore"
+                    src="./img/einaudi.jpeg"
+                    alt="einaudi playlist"
+                  />
+                </div>
+                <h3>Ludovico Einaudi</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -130,9 +252,9 @@
       </div>
       <!-- volume -->
       <div class="sound">
-        <div><i class="fa-solid fa-bars"></i></div>
-        <div><i class="fa-solid fa-display"></i></div>
-        <div><i class="fa-solid fa-volume-high"></i></div>
+        <div class="volume-item"><i class="fa-solid fa-bars"></i></div>
+        <div class="volume-item"><i class="fa-solid fa-display"></i></div>
+        <div class="volume-item"><i class="fa-solid fa-volume-high"></i></div>
         <div class="sound-bar"></div>
       </div>
     </footer>
