add: hover effect on side-bar and top section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
               <!-- heavy metal -->
               <div class="card">
                 <!-- playlist image -->
-                <div>
-                  <img src="./img/metal_lifting.jpg" alt="metal playlist" />
+                <div class="song-image-div">
+                  <img
+                    class="song-select"
+                    src="./img/metal_lifting.jpg"
+                    alt="metal playlist"
+                  />
                 </div>
                 <h3>Heavy Metal</h3>
                 <p>Subtitle</p>
