add: sound-bar and player-bar hover

--- a/index.html
+++ b/index.html
@@ -270,7 +270,11 @@
         <!-- duration -->
         <div class="flex duration">
           <div><p>0:25</p></div>
-          <div class="duration-bar"></div>
+          <div class="duration-bar">
+            <span class="advancement">
+              <span class="advancement-dot"></span>
+            </span>
+          </div>
           <div><p>4:35</p></div>
         </div>
       </div>
@@ -279,7 +283,11 @@
         <div class="volume-item"><i class="fa-solid fa-bars"></i></div>
         <div class="volume-item"><i class="fa-solid fa-display"></i></div>
         <div class="volume-item"><i class="fa-solid fa-volume-high"></i></div>
-        <div class="sound-bar"></div>
+        <div class="sound-bar">
+          <span class="advancement">
+            <span class="advancement-dot"></span>
+          </span>
+        </div>
       </div>
     </footer>
   </body>
